# gl_tutorials

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
01_triangle/: 01_triangle  01_triangle_vanilla  CMakeCache.txt  Makefile  cmake_install.cmake  glad.c  main.cpp
02_simple3d/: 02_simple3d  Makefile  cmake_install.cmake
03_textures/: 03_textures  Makefile  cmake_install.cmake
03_textures/shaders/: texture_blend.fragment.glsl
04_deffered/: 04_deffered  CMakeCache.txt  Makefile  cmake_install.cmake  main.cpp  renderer.hpp  scene_definition.hpp
04_deffered/shaders/: compositing.fragment.glsl  material_deffered.fragment.glsl
05_shaders/: 05_shaders  CMakeCache.txt  Makefile  cmake_install.cmake  main.cpp  renderer.hpp  scene_definition.hpp
05_shaders/shaders/: basic_instanced.vertex.glsl  pn_triangles.vertex.glsl
06_noise/: 06_noise  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  scene_definition.hpp
06_noise/shaders/: noise_2d.fragment.glsl  simplex_2d.fragment.glsl  simplex_2d.program  terrain.evaluation.glsl  terrain.fragment.glsl
07_3d_textures/: 07_3d_textures  CMakeLists.txt  Makefile  cmake_install.cmake
08_webgl/: README.md  package-lock.json  package.json
09_compute/: convolution.cpp
09_compute/shaders/: convolution.compute.glsl  scan.compute.glsl  scan_sum.compute.glsl
10_deffered_2/: main.cpp  scene_definition.hpp
11_opencl/: cl_utils.hpp  conway.cpp  diffusion.cpp
11_opencl/kernels/: conway.cl
12_l-system/: l_system_generator.hpp  main.cpp
doc/: depth_buffer.md
utils/: camera.hpp
(+13 files in other folders)
